--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "frontend:build": "next build",
     "frontend:start": "next start",
     "frontend:lint": "next lint",
-    "backend:start": "uvicorn server.main:app --reload --host 0.0.0.0 --port 8000",
-    "bootstrap": "pnpm install && cd server && python -m venv .venv && .venv\\Scripts\\pip install -r requirements.txt && cd .."
+    "backend:start": "cd server && ..\\server\\.venv\\Scripts\\python -m uvicorn main:app --reload --host 0.0.0.0 --port 8000",
+    "bootstrap": "pnpm install && cd server && powershell -Command \"if (!(Test-Path .venv)) { python -m venv .venv } ; .venv\\Scripts\\pip install -r requirements.txt\" && cd .."
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
