Fix build error and adjust readme

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# Python virtual environments
+# Python virtual environments and cache
 server/.venv/
+server/__pycache__/
